firmware/defmt-test/macros/tests/ui/test-has-invalid-function-signature.stderr
error: `#[test]` function must have signature `fn()` or `fn(state: &mut T)`
 --> tests/ui/test-has-invalid-function-signature.rs:6:8
  |
6 |     fn hello(a: i32, b: i32) -> i32 {
  |        ^^^^^
